--- a/findus.html
+++ b/findus.html
@@ -60,6 +60,34 @@
         }
         
     </style>
+    <style>
+/* Hide Google top banner */
+.goog-te-banner-frame {
+    display: none !important;
+}
+
+/* Remove spacing that Google adds to body */
+body {
+    top: 0px !important;
+}
+
+/* Hide the Google toolbar that appears at top */
+#goog-gt-tt, .goog-te-balloon-frame, .goog-te-menu-frame {
+    display: none !important;
+}
+
+/* Prevent full-page grey overlay */
+.goog-te-overlay {
+    display: none !important;
+}
+
+/* Make sure no translation tooltip appears */
+.goog-text-highlight {
+    background: none !important;
+    box-shadow: none !important;
+}
+</style>
+
 </head>
 <body>
 
@@ -184,5 +212,63 @@
             map.setView([PG_LAT, PG_LON], 15);
         }
     </script>
+    <!-- Google Translate (hidden UI) -->
+<div id="google_translate_element" style="display:none;"></div>
+
+<script>
+function setCookie(name, value, days) {
+  var expires = "";
+  if (days) {
+    var date = new Date();
+    date.setTime(date.getTime() + days*24*60*60*1000);
+    expires = "; expires=" + date.toUTCString();
+  }
+  document.cookie = name + "=" + (value || "") + expires + "; path=/";
+}
+
+function applySavedLanguage(lang) {
+  if (!lang) return;
+  var trans = "/en/" + lang;
+  setCookie("googtrans", trans, 365);
+  setCookie("googtrans", trans, 365);
+}
+
+function initGoogleTranslate() {
+  new google.translate.TranslateElement(
+    { pageLanguage: "en", autoDisplay: false },
+    "google_translate_element"
+  );
+
+  var tries = 0;
+  var poll = setInterval(function () {
+    var combo = document.querySelector(".goog-te-combo");
+    if (combo || tries > 25) {
+      clearInterval(poll);
+
+      var saved = localStorage.getItem("selectedLang") || "";
+      if (saved && combo) {
+        setTimeout(function () {
+          combo.value = saved;
+          combo.dispatchEvent(new Event("change"));
+        }, 300);
+      }
+    }
+    tries++;
+  }, 200);
+}
+
+(function () {
+  var s = document.createElement("script");
+  s.src =
+    "//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit";
+  s.async = true;
+  document.head.appendChild(s);
+  window.googleTranslateElementInit = initGoogleTranslate;
+
+  var existing = localStorage.getItem("selectedLang");
+  if (existing) applySavedLanguage(existing);
+})();
+</script>
+
 </body>
 </html>
